wip: a lot refactor for websocket server, Message class and plugin system